crates/server/tests/grammar/snapshots/r#mod__grammar__alpha050__mv_files.snap
---
source: tests/grammar/alpha050.rs
expression: parse_unwrap(&tokenize(input))
---
[
    (
        Statement(
            (
                MoveFiles(
                    [],
                    (
                        "mv",
                        5..7,
                    ),
                    (
                        Text(
                            [
                                (
                                    Text(
                                        (
                                            "/tmp/a",
                                            9..15,
                                        ),
                                    ),
                                    9..15,
                                ),
                            ],
                        ),
                        8..16,
                    ),
                    (
                        Text(
                            [
                                (
                                    Text(
                                        (
                                            "/tmp/b",
                                            18..24,
                                        ),
                                    ),
                                    18..24,
                                ),
                            ],
                        ),
                        17..25,
                    ),
                    [],
                ),
                5..25,
            ),
        ),
        5..25,
    ),
    (
        Statement(
            (
                MoveFiles(
                    [
                        (
                            Unsafe,
                            31..37,
                        ),
                    ],
                    (
                        "mv",
                        38..40,
                    ),
                    (
                        Text(
                            [
                                (
                                    Text(
                                        (
                                            "/tmp/a",
                                            42..48,
                                        ),
                                    ),
                                    42..48,
                                ),
                            ],
                        ),
                        41..49,
                    ),
                    (
                        Text(
                            [
                                (
                                    Text(
                                        (
                                            "/tmp/b",
                                            51..57,
                                        ),
                                    ),
                                    51..57,
                                ),
                            ],
                        ),
                        50..58,
                    ),
                    [],
                ),
                31..58,
            ),
        ),
        31..58,
    ),
    (
        Statement(
            (
                MoveFiles(
                    [],
                    (
                        "mv",
                        64..66,
                    ),
                    (
                        Text(
                            [
                                (
                                    Text(
                                        (
                                            "/tmp/a",
                                            68..74,
                                        ),
                                    ),
                                    68..74,
                                ),
                            ],
                        ),
                        67..75,
                    ),
                    (
                        Text(
                            [
                                (
                                    Text(
                                        (
                                            "/tmp/b",
                                            77..83,
                                        ),
                                    ),
                                    77..83,
                                ),
                            ],
                        ),
                        76..84,
                    ),
                    [
                        (
                            Failure(
                                (
                                    Handle(
                                        (
                                            "failed",
                                            85..91,
                                        ),
                                        None,
                                        (
                                            Block(
                                                [],
                                                [
                                                    (
                                                        Echo(
                                                            (
                                                                "echo",
                                                                102..106,
                                                            ),
                                                            (
                                                                Text(
                                                                    [
                                                                        (
                                                                            Text(
                                                                                (
                                                                                    "Error",
                                                                                    108..113,
                                                                                ),
                                                                            ),
                                                                            108..113,
                                                                        ),
                                                                    ],
                                                                ),
                                                                107..114,
                                                            ),
                                                        ),
                                                        102..114,
                                                    ),
                                                ],
                                            ),
                                            92..120,
                                        ),
                                    ),
                                    85..120,
                                ),
                            ),
                            85..120,
                        ),
                    ],
                ),
                64..120,
            ),
        ),
        64..120,
    ),
    (
        Statement(
            (
                Block(
                    (
                        Block(
                            [
                                (
                                    Unsafe,
                                    126..132,
                                ),
                            ],
                            [
                                (
                                    MoveFiles(
                                        [],
                                        (
                                            "mv",
                                            143..145,
                                        ),
                                        (
                                            Text(
                                                [
                                                    (
                                                        Text(
                                                            (
                                                                "/tmp/a",
                                                                147..153,
                                                            ),
                                                        ),
                                                        147..153,
                                                    ),
                                                ],
                                            ),
                                            146..154,
                                        ),
                                        (
                                            Text(
                                                [
                                                    (
                                                        Text(
                                                            (
                                                                "/tmp/b",
                                                                156..162,
                                                            ),
                                                        ),
                                                        156..162,
                                                    ),
                                                ],
                                            ),
                                            155..163,
                                        ),
                                        [],
                                    ),
                                    143..163,
                                ),
                            ],
                        ),
                        126..169,
                    ),
                ),
                126..169,
            ),
        ),
        126..169,
    ),
]
