crates/server/tests/grammar/snapshots/r#mod__grammar__alpha050__single_dollar_cmd.snap
---
source: tests/grammar/alpha050.rs
expression: "compiler.tokenize(\"$echo$\")"
---
[
    (
        Token(
            "$",
        ),
        0..1,
    ),
    (
        Token(
            "echo",
        ),
        1..5,
    ),
    (
        Token(
            "$",
        ),
        5..6,
    ),
]
