crates/server/tests/grammar/snapshots/r#mod__grammar__alpha050__unfinished_function_call.snap
---
source: tests/grammar/alpha050.rs
expression: tokens
---
[
    (
        Token(
            "import",
        ),
        5..11,
    ),
    (
        Token(
            "{",
        ),
        12..13,
    ),
    (
        Token(
            "array_contains",
        ),
        14..28,
    ),
    (
        Token(
            "}",
        ),
        29..30,
    ),
    (
        Token(
            "from",
        ),
        31..35,
    ),
    (
        Token(
            "\"",
        ),
        36..37,
    ),
    (
        Token(
            "std/array",
        ),
        37..46,
    ),
    (
        Token(
            "\"",
        ),
        46..47,
    ),
    (
        Token(
            "let",
        ),
        53..56,
    ),
    (
        Token(
            "x",
        ),
        57..58,
    ),
    (
        Token(
            "=",
        ),
        59..60,
    ),
    (
        Token(
            "[",
        ),
        61..62,
    ),
    (
        Token(
            "1",
        ),
        62..63,
    ),
    (
        Token(
            ",",
        ),
        63..64,
    ),
    (
        Token(
            "2",
        ),
        65..66,
    ),
    (
        Token(
            ",",
        ),
        66..67,
    ),
    (
        Token(
            "3",
        ),
        68..69,
    ),
    (
        Token(
            "]",
        ),
        69..70,
    ),
    (
        Token(
            "let",
        ),
        75..78,
    ),
    (
        Token(
            "y",
        ),
        79..80,
    ),
    (
        Token(
            "=",
        ),
        81..82,
    ),
    (
        Token(
            "2",
        ),
        83..84,
    ),
    (
        Token(
            "echo",
        ),
        90..94,
    ),
    (
        Token(
            "array_contains",
        ),
        95..109,
    ),
    (
        Token(
            "(",
        ),
        109..110,
    ),
    (
        Token(
            "x",
        ),
        110..111,
    ),
    (
        Token(
            ",",
        ),
        111..112,
    ),
    (
        Token(
            "y",
        ),
        113..114,
    ),
    (
        Token(
            ")",
        ),
        114..115,
    ),
    (
        Token(
            "let",
        ),
        121..124,
    ),
    (
        Token(
            "line",
        ),
        125..129,
    ),
    (
        Token(
            "=",
        ),
        130..131,
    ),
    (
        Token(
            "213",
        ),
        132..135,
    ),
    (
        Token(
            "for",
        ),
        141..144,
    ),
    (
        Token(
            "idx",
        ),
        145..148,
    ),
    (
        Token(
            ",",
        ),
        148..149,
    ),
    (
        Token(
            "line",
        ),
        150..154,
    ),
    (
        Token(
            "in",
        ),
        155..157,
    ),
    (
        Token(
            "lines",
        ),
        158..163,
    ),
    (
        Token(
            "(",
        ),
        163..164,
    ),
    (
        Token(
            "\"",
        ),
        164..165,
    ),
    (
        Token(
            "text.txt",
        ),
        165..173,
    ),
    (
        Token(
            "\"",
        ),
        173..174,
    ),
    (
        Token(
            ")",
        ),
        174..175,
    ),
    (
        Token(
            "{",
        ),
        176..177,
    ),
    (
        Token(
            "echo",
        ),
        184..188,
    ),
    (
        Token(
            "line",
        ),
        189..193,
    ),
    (
        Token(
            "}",
        ),
        198..199,
    ),
    (
        Token(
            "// fun foo(x: Num, y: Text) {\n",
        ),
        205..235,
    ),
    (
        Token(
            "// }\n",
        ),
        240..245,
    ),
    (
        Token(
            "fun",
        ),
        250..253,
    ),
    (
        Token(
            "foo",
        ),
        254..257,
    ),
    (
        Token(
            "(",
        ),
        257..258,
    ),
    (
        Token(
            "x",
        ),
        258..259,
    ),
    (
        Token(
            ":",
        ),
        259..260,
    ),
    (
        Token(
            "Num",
        ),
        261..264,
    ),
    (
        Token(
            ",",
        ),
        264..265,
    ),
    (
        Token(
            "y",
        ),
        266..267,
    ),
    (
        Token(
            ":",
        ),
        267..268,
    ),
    (
        Token(
            "Text",
        ),
        269..273,
    ),
    (
        Token(
            ")",
        ),
        273..274,
    ),
    (
        Token(
            "{",
        ),
        275..276,
    ),
    (
        Token(
            "}",
        ),
        281..282,
    ),
    (
        Token(
            "// fun abc() {}\n",
        ),
        288..304,
    ),
    (
        Token(
            "array_contains",
        ),
        309..323,
    ),
    (
        Token(
            "(",
        ),
        323..324,
    ),
    (
        Token(
            "[",
        ),
        324..325,
    ),
    (
        Token(
            "1",
        ),
        325..326,
    ),
    (
        Token(
            ",",
        ),
        326..327,
    ),
    (
        Token(
            "2",
        ),
        328..329,
    ),
    (
        Token(
            ",",
        ),
        329..330,
    ),
    (
        Token(
            "3",
        ),
        331..332,
    ),
    (
        Token(
            "]",
        ),
        332..333,
    ),
    (
        Token(
            ",",
        ),
        333..334,
    ),
    (
        Token(
            ")",
        ),
        334..335,
    ),
]
